    plugins.

  - Plugins are passed any SMTP parameters given with the sender and
    recipient commands.

  - Plugins can add new commands to the SMTP protocol.

  Plugins compiled for previous versions of mailfront will not work
  without recompiling.  The short-circuit on accept logic has also been
  eliminated to fix a semantic issue.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.21

- Added controls for pop3front-auth to limit the number of USER commands
  and authentication failures allowed per session.

- Added control to imapfront-auth to limit the number of authentication
  failures allowed per session.

- Modified the clamav plugin to use the newer INSTREAM protocol.

- imapfront-auth now sets $DOVECONF_ENV in Dovecot mode in order to
  avoid having Dovecot imapd reset it through doveconf.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.20

- Added Lua scripting plugin (optional, build with 'make lua').

- Modified the qmail backend to evaluate $QMAILQUEUE as late as possible.
  This allows more options for changing $QMAILQUEUE in plugins.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.18

- Added support for running Dovecot IMAP from imapfront-auth.
  See imapfront.html for details on how to set this up.

- Moved more trivial plugins into builtins.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------