@@ -100,6 +100,8 @@ The following plugins are included in the main package:</p>
 
 <li><a href="plugin-counters.html">counters</a></li>
 
+<li><a href="plugin-cvm-authenticate.html">cvm-validate</a></li>
+
 <li><a href="plugin-cvm-validate.html">cvm-validate</a></li>
 
 <li><a href="plugin-force-file.html">force-file</a></li>
