@@ -1,0 +1,46 @@
+<html>
+<body>
+
+<h2><a href="mailfront.html">mailfront</a></h2>
+
+<h1>Plugin: cvm-authenticate</h1>
+
+<hr />
+
+<p>This plugin uses a <a
+href="http://untroubled.org/cvm/cvm.html">CVM</a> to validate recipient
+addresses.</p>
+
+<h2>Configuration</h2>
+
+<p>This module is configured by
+  the <a href="http://untroubled.org/cvm/sasl.html">CVM SASL</a>
+  library.</p>
+
+<h2>Commands</h2>
+
+<dl>
+
+<dt><tt>AUTH</tt></dt> <dd>Implements the SMTP service extension for
+authentication, as specified by RFC 2554.</dd>
+
+</dl>
+
+<h2>Sender Action</h2>
+
+<p>None</p>
+
+<h2>Recipient Action</h2>
+
+<p>None</p>
+
+<h2>Data Action</h2>
+
+<p>None</p>
+
+<h2>Message Action</h2>
+
+<p>None</p>
+
+</body>
+</html>
