@@ -1,4 +1,2 @@
--lcvm-sasl
--lcvm-v2client
 -lbg
 -lbg-sysdeps
