@@ -1,1 +1,1 @@
-exec "$(dirname $0)"/mailfront smtp qmail check-fqdn counters mailrules relayclient cvm-validate qmail-validate add-received patterns "$@"
+exec "$(dirname $0)"/mailfront smtp qmail cvm-authenticate check-fqdn counters mailrules relayclient cvm-validate qmail-validate add-received patterns "$@"
